# b2b-pv-lead-gen

./: .gitignore  README.md  app.py  pyproject.toml  solar_pv_lead_gen_brief.md
data/processed/: leads.geojson  oberbayern_boundary.gpkg  ranked_leads_oberbayern.csv  sunshine_mean_ob.tif
data/raw/: README.md
scripts/: s1_mean_sunshine.py  s2_reproject.py  s3_clip_oberbayern.py  s4_percentile.py  s5_build_leads.py  s6_overview_map.py
